<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>


    <!--app names -->
    <string name="spotify_app_name">SPOTIFY STREAMER</string>
    <string name="scores_app_name">SCORES APP</string>
    <string name="library_app_name">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone_app">CAPSTONE: MY OWN APP</string>

    <!--toasts-->

    <string name="spotify_toast">This button will launch my spotify streamer app</string>
    <string name="scores_toast">This button will launch my scores app</string>
    <string name="library_toast">This button will launch my library app</string>
    <string name="build_it_bigger_toast">This button will launch my build it bigger app</string>
    <string name="xyz_reader_toast">This button will launch my xyz reader app</string>
    <string name="capstone_toast">This button will launch my capstone app</string>


</resources>
