<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/main_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_app_name"
   />
    <Button
        android:id="@+id/scores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_name"
    />
    <Button
        android:id="@+id/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app_name"
    />
    <Button
        android:id="@+id/build_it_bigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
    />
    <Button
        android:id="@+id/xyz_reader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
    />
    <Button
        android:id="@+id/capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app"
    />

</LinearLayout>
